# python-project-83

./: Makefile  README.md  database.sql  db-compose.yaml  pyproject.toml  your.env
.github/workflows/: tests_linter_ci.yml
alembic/: env.py
page_analyzer/: app.py  meta_create_all.py  models.py  repos_psycopg.py  repositories.py  repository.py
page_analyzer/scripts/: create_meta.py  reset_meta.py
templates/: error404.html  index.html  layout.html  url_show.html  urls_index.html
templates/blocks/: message.html
